argocd-main/resources/uat/dex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-dex
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-resources
  hostnames:
      - app.gw.k8s.sh.aban.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dex-idp-app
          port: 5556
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /dex
